mensagem do que foi alterado

--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,8 @@
   <base href="/">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta content="IE-Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Um aplicativo para rastreamento e cálculo de carbono.">
-
-  <meta name="google-signin-client_id" content="881045701473-ld0lc858d7641n9l5rb4nqfcqf0n8s9n.apps.googleusercontent.com">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
